feat: ENTERPRISE GRADE - Redis rate limiting, Resend email, Sentry
Rate Limiting:
- lib/redis.ts: Upstash Redis with distributed rate limiting
- Persists across serverless instances
- X-RateLimit-* headers on responses

Email Service:
- Integrated Resend SDK into contact API
- Auto-reply to submitters
- HTML email templates
- Discord fallback if email fails

Error Tracking:
- sentry.client.config.ts: Browser monitoring + session replay
- sentry.server.config.ts: Node.js error capture
- sentry.edge.config.ts: Edge runtime support

Dependencies:
- @upstash/redis, @upstash/ratelimit
- @sentry/nextjs
- resend

Configuration:
- .env.example with all enterprise services documented

--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,54 @@
 # Environment Variables
 
-# Site URL (used for SEO and canonical URLs)
+# ===== REQUIRED =====
+
+# Site URL
 NEXT_PUBLIC_SITE_URL=https://axoraco.vercel.app
 
-# Analytics
+# ===== ANALYTICS (Optional) =====
+
 NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
 NEXT_PUBLIC_GTM_CONTAINER_ID=GTM-XXXXXXX
 
-# Discord Webhook (for contact form notifications)
+# ===== CONTACT FORM =====
+
+# Discord Webhook (fallback notification)
 DISCORD_CONTACT_WEBHOOK_URL=https://discord.com/api/webhooks/...
 
-# Email Service (Resend - get API key from resend.com)
+# ===== EMAIL SERVICE (Resend) =====
 # Free tier: 3000 emails/month
-RESEND_API_KEY=re_xxxxxxxx
+# Get API key: https://resend.com
+
+RESEND_API_KEY=re_xxxxxxxxxxxxxxxxxxxxxxxxx
 EMAIL_FROM="Axoraco <onboarding@resend.dev>"
 EMAIL_TO=team.axoraco@gmail.com
 
-# Error Tracking (Sentry - get DSN from sentry.io)
+# ===== ERROR TRACKING (Sentry) =====
 # Free tier: 5000 errors/month
+# Get DSN: https://sentry.io
+
 NEXT_PUBLIC_SENTRY_DSN=https://xxx@xxx.ingest.sentry.io/xxx
+SENTRY_AUTH_TOKEN=sntrys_xxxxxxxxxxxxxxxxxxxxxxxxx
+
+# ===== RATE LIMITING (Upstash Redis) =====
+# Free tier: 10000 requests/day
+# Create database: https://upstash.com
+
+UPSTASH_REDIS_REST_URL=https://xxx.upstash.io
+UPSTASH_REDIS_REST_TOKEN=xxx
+
+# ===== OPTIONAL: DATABASE (Supabase) =====
+# For storing contact submissions, user data, etc.
+# Create project: https://supabase.com
+
+# SUPABASE_URL=https://xxx.supabase.co
+# SUPABASE_ANON_KEY=xxx
+# SUPABASE_SERVICE_ROLE_KEY=xxx
+
+# ===== OPTIONAL: AUTHENTICATION (NextAuth) =====
+# For user login, OAuth, etc.
+
+# NEXTAUTH_URL=https://axoraco.vercel.app
+# NEXTAUTH_SECRET=xxx
+# GOOGLE_CLIENT_ID=xxx
+# GOOGLE_CLIENT_SECRET=xxx
