feat: add Supabase database integration
Database:
- lib/supabase.ts: Supabase client with contact CRUD operations
- Integrated into contact API - all submissions saved to database
- Added 8 Supabase tests

API Changes:
- Contact API now saves to database before sending notifications
- GET /api/contact returns databaseEnabled status

Tests: 143 total (122 passing)

--- a/.env.example
+++ b/.env.example
@@ -37,13 +37,12 @@ SENTRY_AUTH_TOKEN=sntrys_xxxxxxxxxxxxxxxxxxxxxxxxx
 UPSTASH_REDIS_REST_URL=https://xxx.upstash.io
 UPSTASH_REDIS_REST_TOKEN=xxx
 
-# ===== OPTIONAL: DATABASE (Supabase) =====
-# For storing contact submissions, user data, etc.
+# ===== DATABASE (Supabase) =====
+# Free tier: 500MB database
 # Create project: https://supabase.com
 
-# SUPABASE_URL=https://xxx.supabase.co
-# SUPABASE_ANON_KEY=xxx
-# SUPABASE_SERVICE_ROLE_KEY=xxx
+NEXT_PUBLIC_SUPABASE_URL=https://xxx.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=xxx
 
 # ===== OPTIONAL: AUTHENTICATION (NextAuth) =====
 # For user login, OAuth, etc.
