--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@sentry/nextjs": "^10.32.1",
+    "@supabase/supabase-js": "^2.89.0",
     "@upstash/ratelimit": "^2.0.7",
     "@upstash/redis": "^1.35.8",
     "clsx": "^2.1.1",
