feat: add Cloudinary CDN integration for optimized images

--- a/.env.example
+++ b/.env.example
@@ -51,3 +51,9 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=xxx
 # NEXTAUTH_SECRET=xxx
 # GOOGLE_CLIENT_ID=xxx
 # GOOGLE_CLIENT_SECRET=xxx
+
+# ===== IMAGE CDN (Cloudinary) =====
+# Free tier: 25GB storage, 25GB bandwidth
+# Create account: https://cloudinary.com
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=your_cloud_name
