feat: add multi-channel notifications - Email, Discord, Google Sheets in parallel

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,10 @@ NEXT_PUBLIC_GTM_CONTAINER_ID=GTM-XXXXXXX
 
 # Discord Webhook (fallback notification)
 DISCORD_CONTACT_WEBHOOK_URL=https://discord.com/api/webhooks/...
+DISCORD_NEWSLETTER_WEBHOOK_URL=https://discord.com/api/webhooks/...
+
+# Google Sheets (Apps Script Web App - see lib/google-sheets.ts for setup)
+GOOGLE_SHEETS_WEBHOOK_URL=https://script.google.com/macros/s/xxx/exec
 
 # ===== EMAIL SERVICE (Resend) =====
 # Free tier: 3000 emails/month
