feat(god-mode): achieve GOD^10 perfection (css, arch, strict-ts, csp)

--- a/.env.example
+++ b/.env.example
@@ -47,6 +47,7 @@ UPSTASH_REDIS_REST_TOKEN=xxx
 
 NEXT_PUBLIC_SUPABASE_URL=https://xxx.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=xxx
+SUPABASE_SERVICE_ROLE_KEY=xxx # Optional: Bypasses RLS for server-side usage
 
 # ===== OPTIONAL: AUTHENTICATION (NextAuth) =====
 # For user login, OAuth, etc.
