--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,8 +59,11 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: build
-          path: .next
+          path: |
+            .next
+            !.next/cache
           retention-days: 1
+          if-no-files-found: error
 
   test:
     name: Unit Tests
