--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,9 +59,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: build
-          path: |
-            .next
-            !.next/cache
+          path: .next
           retention-days: 1
           if-no-files-found: error
 
